syntax = "proto3";

package cmd;

service MockService {
    rpc LongCall(TestMessage) returns (TestMessage) {}
}


message TestMessage {
    string MessageString = 1;
}

